kubernetes/prod/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ldml-api
  namespace: wstech
spec:
  replicas: 1
  selector:
    matchLabels:
      workload.user.cattle.io/workloadselector: apps.deployment-wstech-ldml-api
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        workload.user.cattle.io/workloadselector: apps.deployment-wstech-ldml-api
      namespace: wstech
    spec:
      restartPolicy: Always
      affinity:
        podAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - topologyKey: kubernetes.io/hostname
            labelSelector:
              matchExpressions:
                - key: workload.user.cattle.io/workloadselector
                  operator: In
                  values:
                    - apps.deployment-wstech-ldml-api
      containers:
        - name: endpoint
          command:
            - ldml-api
            - '--listen=0.0.0.0:80'
            - '--config=/var/lib/ldml-api/config.json'
            - '--profile=production'
          image: ghcr.io/tim-eves/ldml-api:latest
          livenessProbe:
            httpGet:
              path: /status
              port: http
            periodSeconds: 10
            timeoutSeconds: 1
            successThreshold: 1
            failureThreshold: 1
          startupProbe:
            httpGet:
              path: /status
              port: http
            periodSeconds: 10
            timeoutSeconds: 1
            successThreshold: 1
            failureThreshold: 3
          ports:
            - containerPort: 80
              name: http
          resources:
            limits:
              memory: 256Mi
            requests:
              memory: 128Mi
          volumeMounts:
            - mountPath: /var/lib/ldml-api/sldr
              name: data-sets
              readOnly: true
              subPath: sldr
            - mountPath: /var/lib/ldml-api/langtags
              name: data-sets
              readOnly: true
              subPath: langtags

      volumes:
      - name: data-sets
        persistentVolumeClaim:
          claimName: ldml-api-data
