kubernetes/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api
spec:
  ingressClassName: nginx
  rules:
    - host: ldml.api.languagetechnology.org
      http:
        paths:
        - backend:
            service:
              name: api-endpoint
              port:
                name: http
          path: /
          pathType: Prefix
